<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="@+id/displayEditText" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:textAlignment="textEnd"
        android:inputType="textPersonName"
        android:hint="@string/displyHint"
        android:textColorHint="@color/greyAccent"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/numericButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- CONSTRAINT 1 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numericButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- HÀNG 1 -->
        <!-- backspace button -->
        <Button
            android:id="@+id/button1"
            style="@style/SpecialButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="backspaceBTNPush"
            android:text="@string/backspaceText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- percent button -->
        <Button
            android:id="@+id/button2"
            style="@style/ScientificFunctionButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:onClick="percentBTNPush"
            android:text="@string/percentText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@id/button1"
            app:layout_constraintTop_toTopOf="@+id/button1"
            app:layout_constraintBottom_toBottomOf="@+id/button1" />

        <!-- square root button -->
        <Button
            android:id="@+id/button3"
            style="@style/ScientificFunctionButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:onClick="squareRootBTNPush"
            android:text="@string/squareRootText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="@+id/button2" />

        <!-- divide button -->
        <Button
            android:id="@+id/button4"
            style="@style/OperatorButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="divideBTNPush"
            android:text="@string/divideText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3"
            app:layout_constraintBottom_toBottomOf="@+id/button3" />

        <!-- HÀNG 2 -->
        <!-- 7 button -->
        <Button
            android:id="@+id/button5"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTNPush"
            android:text="@string/sevenText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1" />

        <!-- 8 button -->
        <Button
            android:id="@+id/button6"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTNPush"
            android:text="@string/eightText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <!-- 9 button -->
        <Button
            android:id="@+id/button7"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTNPush"
            android:text="@string/nineText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <!-- multiply button -->
        <Button
            android:id="@+id/button8"
            style="@style/OperatorButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="multiplyBTNPush"
            android:text="@string/multiplyText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <!-- HÀNG 3 -->
        <!-- 4 button -->
        <Button
            android:id="@+id/button9"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourBTNPush"
            android:text="@string/fourText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button5" />

        <!-- 5 button -->
        <Button
            android:id="@+id/button10"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTNPush"
            android:text="@string/fiveText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <!-- 6 button -->
        <Button
            android:id="@+id/button11"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTNPush"
            android:text="@string/sixText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <!-- subtract button -->
        <Button
            android:id="@+id/button12"
            style="@style/OperatorButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="subtractBTNPush"
            android:text="@string/subtractText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <!-- HÀNG 4 -->
        <!-- 1 button -->
        <Button
            android:id="@+id/button13"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTNPush"
            android:text="@string/oneText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button9" />

        <!-- 2 button -->
        <Button
            android:id="@+id/button14"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBTNPush"
            android:text="@string/twoText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <!-- 3 button -->
        <Button
            android:id="@+id/button15"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTNPush"
            android:text="@string/threeText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <!-- add button -->
        <Button
            android:id="@+id/button16"
            style="@style/OperatorButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="addBTNPush"
            android:text="@string/addText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <!-- HÀNG 5 -->
        <!-- clear button -->
        <Button
            android:id="@+id/button17"
            style="@style/SpecialButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:onClick="clearBTNPush"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button13" />

        <!-- zero button -->
        <Button
            android:id="@+id/button18"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTNPush"
            android:text="@string/zeroText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <!-- decimal button -->
        <Button
            android:id="@+id/button19"
            style="@style/NumberButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="decimalBTNPush"
            android:text="@string/decimalText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <!-- equal button -->
        <Button
            android:id="@+id/button20"
            style="@style/OperatorButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="equalsBTNPush"
            android:text="@string/equalsText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button16" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>